[package]
name = "markov-wasm"
version = "0.1.0"
authors = ["lennart"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]


[features]
default = ["console_error_panic_hook", "yaml"]
yaml = ["serde_yaml"]

[dependencies]
wasm-bindgen = "0.2"
getrandom = {version = "*", features = ["wasm-bindgen","js"]}
rand = "*"
lazy_static = "1.4.0"
markov = {path = "markov"}
serde = "1.0"
serde_derive = "1.0"
serde_yaml = { version = "0.7", optional = true }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.1", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
#
# Unfortunately, `wee_alloc` requires nightly Rust when targeting wasm for now.
wee_alloc = { version = "0.4.2", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.2"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
